[tool.poetry]
name = "has-python"
version = "0.1.0"
description = "A very basic demo to show Hive Authentication Service (HAS) in Python"
authors = ["Brian of London (Dot) <brian@v4v.app>"]
license = "MIT"
readme = "README.md"
packages = [{include = "has_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.16.0"
websockets = "^10.4"
qrcode = "^7.3.1"
pillow = "^9.4.0"
pydantic = "^1.10.4"
beem = {git = "https://gitlab.syncad.com/hive/beem.git"}
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
